# Docker_with_pgAdmin_Lec08

./: .env  Dockerfile  compose.yaml  pyproject.toml
tests/: test_main.py
todo/: main.py  setting.py
